[package]
name = "cf2020-sys"
version = "0.1.0"
authors = ["Ziyan \"Jerry\" Chen <jerryc443@gmail.com>"]
edition = "2018"
description = "Cloudflare 2020 System Engineering Assignment"
#documentation = "https://docs.rs/???"
readme = "README.md"
#homepage = "https://???.rs/"
#repository = ""
license = "GPL-3.0-or-later"
keywords = ["profile"]
categories = [
    "command-line-utilities"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
lazy_static = "^1"
native-tls = "^0.2"


[profile.release]
codegen-units = 1
lto = true